# chopper

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
chopper/: __init__.py  selectors.py  window.py
chopper/common/: annotations.py  cache.py  colors.py  gpu_counter_metrics.py  load.py  printing.py  rocm_metrics.py  trace_metrics.py
chopper/plots/: README.md  average_power_freq.py  comm_dur.py  comm_straggler.py  comm_violin.py  cpu_active_cores.py  cpu_phys_log.py  device_cdf.py  device_timeline.py  end_to_end.py  freq_pow.py  freq_temp_corr.py  gemm_time.py  launch_overhead.py  lead_and_throughput.py  overhead_breakdown.py  overlap_confs.py  overlap_correlation.py  overlap_gpus.py  overlap_straggler_leader.py  power_cap_dist.py  rocm_arch_chart.py  rocm_dashboard.py  straggler_per_gpu.py  total_power.py  vec_time.py
chopper/profile/: collect.py  merge.py  runner.py
chopper/profile/telemetry/: README.md  counters.py  cpu.py  device_counters.py  gpu.py
chopper/profile/telemetry/src/: CMakeLists.txt  Makefile  device_counters_tool.cpp
examples/device_profiling/: bench.py  compare_overhead.py  compare_overhead.sh  go.sh  hipblaslt_gemm.cpp  plot_counters.py  plot_device_timeline.py  plot_mfma_cdf.py  plot_mfma_per_kernel.py
src/common/: annotations.py  colors.py
tests/: __main__.py
