[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "chopper"
version = "0.10"
dependencies = ["pandas", "numpy", "matplotlib", "mypy", "ijson", "PyQt6"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["chopper"]
wheel.install-dir = "chopper"

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_LIBDIR = "profile/telemetry/lib"
