[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "chopper"
version = "0.10"
dependencies = ["pandas", "numpy", "matplotlib", "mypy", "PyQt6", "loguru", "scipy", "psutil"]

[project.optional-dependencies]
dev = ["pdoc", "mypy", "ruff"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["chopper"]
wheel.install-dir = "chopper"

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_LIBDIR = "profile/telemetry/lib"
